Add options to replace relative links

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 dependencies = [
+    "beautifulsoup4>=4.12",
     "httpx>=0.25",
     "markdownify>=0.13",
     "protego>=0.3",
