--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "markdownify>=0.13",
     "protego>=0.3",
     "readabilipy>=0.2",
+    "trafilatura>=1.6",
 ]
 dynamic = ["version"]
 
